bk_ida/gccida/g2/convert_for_assignment
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_for_assignment/src/c-typeck.c:4478:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_for_assignment/src/c-typeck.c:4491:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_for_assignment/src/c-typeck.c:4493:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_for_assignment/src/c-typeck.c:4494:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_for_assignment/src/c-typeck.c:4495:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_for_assignment/src/c-typeck.c:4496:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_for_assignment/src/c-typeck.c:4528:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *fundecld; // [rsp+8h] [rbp-60h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_for_assignment/src/c-typeck.c:4816:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v39.rtwint = ( __int64)rtl->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_for_assignment/src/c-typeck.c:4988:20: error: expected expression
v27 = ( tree_node *)low; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_for_assignment/src/c-typeck.c:4988:9: error: use of undeclared identifier 'tree_node'
v27 = ( tree_node *)low; 
        ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_for_assignment/src/obj/c-typeck.o] Error 1
